# Syzygy

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  setup-hooks.sh  tsconfig.node.json
.githooks/: commit-msg  pre-commit
.meta/: project-health.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  ollama.rs
src-tauri/src/commands/: file_ops.rs  mod.rs  project.rs  templates.rs
src-tauri/src/engine/: export.rs  mod.rs  pipeline.rs  typst_engine.rs  watcher.rs
src-tauri/src/rfp/: analyzer.rs  compliance.rs  mod.rs
src-tauri/src/storage/: content_library.rs  database.rs  mod.rs  settings.rs
src/components/AIAssistant/: AIAssistant.css  index.tsx
src/components/CommandPalette/: CommandPalette.css  index.tsx
src/components/ContentLibrary/: ContentLibrary.css  index.tsx
src/components/Editor/: CodeMirrorEditor.tsx  Editor.css  index.tsx
src/components/FileTree/: FileTree.css  index.tsx
src/components/Pipeline/: Pipeline.css  index.tsx
src/components/Pipeline/nodes/: ConditionNode.tsx  OutputNode.tsx  SourceNode.tsx  TransformNode.tsx  nodes.css
src/components/Preview/: Preview.css  index.tsx
src/components/RFPAnalyzer/: RFPAnalyzer.css  index.tsx
