[package]
name = "syzygy"
version = "0.1.0"
description = "Premium Document Engineering IDE - Craft documents with visual pipelines and AI"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "syzygy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Typst document compilation
typst = "0.13"
typst-pdf = "0.13"
typst-render = "0.13"
typst-syntax = "0.13"
typst-kit = "0.13"
comemo = "0.4"

# File system
notify = "8"
walkdir = "2"
glob = "0.3"

# Database
surrealdb = { version = "2", features = ["kv-mem", "kv-rocksdb"] }

# AI/HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# Text processing
regex = "1"

# Utilities
thiserror = "2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
parking_lot = "0.12"
once_cell = "1"
directories = "5"
lazy_static = "1.5"

[features]
default = []
devtools = ["tauri/devtools"]
